--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-sass": "^2.3.2"
+    "gulp-ruby-sass": "^2.1.0",
+    "gulp-watch": "^4.3.9"
   }
 }
