--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-ruby-sass": "^2.1.0",
+    "gulp-sass": "^2.3.2",
     "gulp-watch": "^4.3.9"
   }
 }
