--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.6.3",
     "bootstrap-sass": "^3.3.7",
-    "breakpoint-sass": "^2.7.0"
+    "breakpoint-sass": "^2.7.0",
+    "sass-flex-mixin": "^1.0.3"
   }
 }
